src/objects/Direct_Debit_Audit_Trail__c.object
<CustomObject>
    <description>Audit Trail for direct debit fields produced and sent to webseries for onward transmission to the bank</description>
    <fields>
        <fullName>Direct_Debit_File_Link__c</fullName>
        <description>Link to direct debit file</description>
        <label>Direct Debit File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Direct_Debit_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Succeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Direct Debit Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DDAT-{000000}</displayFormat>
        <label>Direct Debit Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Debit Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>